# tts_webui_extension.higgs_v2

./: README.md  pyproject.toml  setup.py
.github/workflows/: build_wheel.yml
extension_higgs_v2/: InterruptionFlag.py  api.py  decorator_convert_audio_output_generator.py  gradio_app.py  main.py
tts_webui_extension/higgs_v2/: demo.py  gradio_app.py  memory.py
