[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_webui_extension.higgs_v2"
version = "0.0.1"
description = "Higgs_v2 TTS extension for text-to-speech generation."
authors = [
    {name = "Boson AI"}
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gradio",
    "higgs-audio @ git+https://github.com/rsxdalv/higgs-audio@main",
]

[project.urls]
Homepage = "https://github.com/rsxdalv/tts_webui_extension.higgs_v2"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# This will find all namespace packages automatically
namespaces = true
